# hsgm

./: README.md
C#Lib/: hsgmParser.cs
C++Lib/: CMakeLists.txt  hsgmParser.cpp  hsgmParser.hpp
Haskall/: hsgmParser.hs
JavaLib/: hsgmParser.java
JavascriptLib/: hsgmParser.js
Lib/: HsgmParser.py
LuaLib/: hsgmParser.lua
PythonLib/: HsgmParser.py
RustLib/: hsgmParser.rs
